# Fundle

./: .gitignore  MIGRATION_README.md  README.md  fundle.config.env.example  package.json
.github/workflows/: build-puzzle.yml  test.yml
apps/api/: .env.example  pyproject.toml
apps/api/app/: config.py  main.py  obfuscate.py  puzzle_date.py
apps/api/app/services/: game.py  hints.py  puzzle_builder.py
apps/api/tests/: test_obfuscate.py  test_puzzle_buckets.py
apps/web/: .env.local.example  package-lock.json  package.json  tsconfig.json
apps/web/app/: layout.tsx
apps/web/app/api/debug/: route.ts
apps/web/app/api/debug-log/: route.ts
apps/web/components/: CommunityStats.tsx  Game.tsx  GuessInput.tsx  ResultCard.tsx  StatsFooter.tsx
apps/web/lib/: api.ts  countdown.ts  engine.test.ts  engine.ts  format.test.ts  format.ts  gameStore.ts  share.ts  stats.ts  storage.ts  supabase.ts  types.ts
apps/web/lib/__fixtures__/: parity.json
scripts/: build_daily_puzzle.py  clear_db.py  dev.js  gen_parity_fixtures.py  setup.js  sync_config.py
supabase/migrations/: 0001_init.sql
